Details
-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 2.3.0
-
None
-
a2c612c170d3ce7568858257b519bd697f798fab
Description
- Open a QML project.
- Open the project's build settings. Make sure the QML debugging library was built.
Creator displays a warning that linking the library is unsafe. - Uncheck "Link QML debugging library".
While the warning is still being displayed, Creator asks if it should rebuild the project. Then the warning disappears. - Check "Link QML debugging library".
The warning will not be displayed until the user made their decision.
Instead, the warning should appear immediately because the user should know this before deciding for or against a rebuild.
Attachments
Issue Links
- resulted from
-
QTCREATORBUG-4633 Rebuild automatically when toggling "Link QML debugging library"
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-5411 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
1832,2 | QMakeStep: Allow UI to update when asking user whether to recompile | 2.3 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |