QMakeStep: Allow UI to update when asking user whether to recompile

Makes sure that the warning about security implications are visible
before the user answers whether to recompile.

Task-number: QTCREATORBUG-5411
Change-Id: I43fe6aeb9e24d25be4fb51f356b6238ce0cd3924
Reviewed-on: http://codereview.qt.nokia.com/1832
Reviewed-by: Daniel Teske <daniel.teske@nokia.com>